--- a/Basic Calculator/The layout/task-info.yaml
+++ b/Basic Calculator/The layout/task-info.yaml
@@ -574,10 +574,8 @@ files:
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/projects/190/stages/949/implement#comment
-status: Failed
+status: Solved
 feedback:
-  message: 'java.lang.RuntimeException: java.lang.IllegalAccessException: Can not
-    set static final org.robolectric.internal.IShadow field org.robolectric.shadow.api.Shadow.SHADOW_IMPL
-    to org.robolectric.internal.bytecode.ShadowImpl'
-  time: Wed, 29 Dec 2021 15:19:08 UTC
-record: -1
+  message: Congratulations!
+  time: Wed, 29 Dec 2021 16:31:06 UTC
+record: 1
