--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,11 +4,11 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: android
-update_date: Wed, 29 Dec 2021 14:46:40 UTC
+update_date: Fri, 31 Dec 2021 07:46:41 UTC
 stages:
 - id: 949
   step: 13537
-  is_completed: false
+  is_completed: true
 - id: 950
   step: 13538
   is_completed: false
