--- a/Basic Calculator/Enter a number/task-info.yaml
+++ b/Basic Calculator/Enter a number/task-info.yaml
@@ -525,5 +525,8 @@ files:
     </resources>
   learner_created: true
 feedback_link: https://hyperskill.org/projects/190/stages/950/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 03 Jan 2022 14:02:03 UTC
 record: -1
