--- a/Basic Calculator/Calculations/task-info.yaml
+++ b/Basic Calculator/Calculations/task-info.yaml
@@ -623,6 +623,15 @@ files:
   visible: false
   text: sdk=28
   learner_created: false
+- name: src/main/res/values/dimen.xml
+  visible: true
+  text: |-
+    <?xml version="1.0" encoding="utf-8"?>
+    <resources>
+        <dimen name="box_size">80dp</dimen>
+        <dimen name="box_height">80dp</dimen>
+    </resources>
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/190/stages/951/implement#comment
 status: Unchecked
 record: -1
