--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -4,7 +4,7 @@ hyperskill_project:
   is_template_based: false
   use_ide: true
   environment: android
-update_date: Mon, 03 Jan 2022 12:35:34 UTC
+update_date: Thu, 13 Jan 2022 19:15:48 UTC
 stages:
 - id: 949
   step: 13537
@@ -14,7 +14,7 @@ stages:
   is_completed: true
 - id: 951
   step: 13539
-  is_completed: false
+  is_completed: true
 - id: 952
   step: 13540
   is_completed: false
@@ -172,10 +172,10 @@ topics:
     theory_id: 16699
   - title: Data structures
     theory_id: 16927
-  - title: Introduction to logging
-    theory_id: 5538
   - title: What is a bug
     theory_id: 5504
+  - title: Introduction to logging
+    theory_id: 5538
   - title: Design principles
     theory_id: 8956
   - title: Single Responsibility Principle
